// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`\`Button\` Component disabled variant render 1`] = `
<DocumentFragment>
  <button
    class="musae-button styles__button.base styles__button.rippleable styles__size.medium styles__variant.filled styles__disabled.base styles__disabled.filled styles__medium theme__title.medium"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: color-mix(in srgb, var(--color-button) 8%, transparent); --color-on-surface: #1D1B20; --color-on-surface-opacity-12: color-mix(in srgb, var(--color-on-surface) 12%, transparent); --color-on-surface-opacity-38: color-mix(in srgb, var(--color-on-surface) 38%, transparent);"
    type="button"
  >
    disabled filled
  </button>
  <button
    class="musae-button styles__button.base styles__button.rippleable styles__size.medium styles__variant.outlined styles__disabled.base styles__disabled.outlined styles__medium theme__title.medium"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: color-mix(in srgb, var(--color-button) 8%, transparent); --color-on-surface: #1D1B20; --color-on-surface-opacity-12: color-mix(in srgb, var(--color-on-surface) 12%, transparent); --color-on-surface-opacity-38: color-mix(in srgb, var(--color-on-surface) 38%, transparent);"
    type="button"
  >
    disabled outlined
  </button>
  <button
    class="musae-button styles__button.base styles__button.rippleable styles__size.medium styles__variant.text styles__disabled.base styles__disabled.text styles__medium theme__title.medium"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: color-mix(in srgb, var(--color-button) 8%, transparent); --color-on-surface: #1D1B20; --color-on-surface-opacity-12: color-mix(in srgb, var(--color-on-surface) 12%, transparent); --color-on-surface-opacity-38: color-mix(in srgb, var(--color-on-surface) 38%, transparent);"
    type="button"
  >
    disabled text
  </button>
</DocumentFragment>
`;

exports[`\`Button\` Component variant render 1`] = `
<DocumentFragment>
  <button
    class="musae-button styles__button.base styles__button.rippleable styles__size.medium styles__variant.filled styles__medium theme__title.medium"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: color-mix(in srgb, var(--color-button) 8%, transparent); --color-on-surface: #1D1B20; --color-on-surface-opacity-12: color-mix(in srgb, var(--color-on-surface) 12%, transparent); --color-on-surface-opacity-38: color-mix(in srgb, var(--color-on-surface) 38%, transparent);"
    type="button"
  >
    filled
  </button>
  <button
    class="musae-button styles__button.base styles__button.rippleable styles__size.medium styles__variant.outlined styles__medium theme__title.medium"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: color-mix(in srgb, var(--color-button) 8%, transparent); --color-on-surface: #1D1B20; --color-on-surface-opacity-12: color-mix(in srgb, var(--color-on-surface) 12%, transparent); --color-on-surface-opacity-38: color-mix(in srgb, var(--color-on-surface) 38%, transparent);"
    type="button"
  >
    outlined
  </button>
  <button
    class="musae-button styles__button.base styles__button.rippleable styles__size.medium styles__variant.text styles__medium theme__title.medium"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: color-mix(in srgb, var(--color-button) 8%, transparent); --color-on-surface: #1D1B20; --color-on-surface-opacity-12: color-mix(in srgb, var(--color-on-surface) 12%, transparent); --color-on-surface-opacity-38: color-mix(in srgb, var(--color-on-surface) 38%, transparent);"
    type="button"
  >
    text
  </button>
</DocumentFragment>
`;
